# quadruped_controller

./: CMakeLists.txt  README.md  package.xml
include/quadruped_controller/: leg.hpp
scripts/: zero_encoders.py
src/: controller.cpp  effector_joint_state_publisher.cpp  inverse_kinematics_test.cpp  leg.cpp  quadruped_controller.cpp  quadruped_controller.yaml
